[gd_scene load_steps=8 format=3 uid="uid://oe474q2vtt4j"]

[ext_resource type="Script" path="res://scripts/montar_scores.gd" id="1_rwq1y"]
[ext_resource type="FontFile" uid="uid://db8tvw3pd7d1k" path="res://resources/FiraMono-Regular.ttf" id="2_gm5h0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtbh6"]
bg_color = Color(0.784248, 0.691647, 0.366515, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xrx7"]
bg_color = Color(0.682353, 0.596078, 0.290196, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_gis7o"]
font_size = 33
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0.284768, 0.210223, 0.0437973, 0)

[sub_resource type="LabelSettings" id="LabelSettings_btg1i"]
font_size = 47
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0.284768, 0.210223, 0.0437973, 0)

[sub_resource type="LabelSettings" id="LabelSettings_sm414"]
font_size = 26
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0.284768, 0.210223, 0.0437973, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -18.0
offset_right = 7.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwq1y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -548.0
offset_top = -157.0
offset_right = 535.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xtbh6")

[node name="Front" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = -134.0
offset_right = 514.0
offset_bottom = 419.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5xrx7")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -32.0
offset_right = -345.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 29
text = "SCORE:"
label_settings = SubResource("LabelSettings_gis7o")

[node name="ScoreResultado" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -41.0
offset_right = 28.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 52
text = "123
"
label_settings = SubResource("LabelSettings_btg1i")
horizontal_alignment = 2

[node name="Tiempo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -452.0
offset_top = -105.0
offset_right = -335.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 29
text = "TIEMPO:"
label_settings = SubResource("LabelSettings_gis7o")

[node name="TiempoResultado" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -105.0
offset_right = 78.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 52
text = "1' 56''"
label_settings = SubResource("LabelSettings_btg1i")
horizontal_alignment = 1

[node name="Monedas" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = 39.0
offset_right = -306.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 29
text = "MONEDAS:"
label_settings = SubResource("LabelSettings_gis7o")

[node name="MonedasResultado" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 22.0
offset_right = 20.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 52
text = "23"
label_settings = SubResource("LabelSettings_btg1i")

[node name="Desbloqueos" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 90.0
offset_right = 118.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_gm5h0")
theme_override_font_sizes/font_size = 28
text = "DESBLOQUEOS CONSEGUIDOS "
label_settings = SubResource("LabelSettings_sm414")

[node name="DesbloqueosList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 463.0
offset_right = 1014.0
offset_bottom = 707.0
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_mode = 0
theme_override_font_sizes/font_size = 30
allow_search = false
max_columns = 4
same_column_width = true
icon_mode = 0
icon_scale = 1.5
